名前を変えました。

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h2>担当メンバー</h2>
 
     <!-- 👇 各メンバーがここに <p>担当：○○</p> を追加していきます -->
-    <p>担当：リーダー</p>
+    <p><担当：kounokimi/p>
 
   </div>
 </body>
