あ”あ”あ”あ”あ”あ”あ”

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- 👇 各メンバーがここに <p>担当：kiyominn</p> を追加していきます -->
     <p>担当：kiyominn</p>
-    <p>担当：watakyonkyon</p>
+    <p>担当：watakyonなのだ</p>
 
   </div>
 </body>
