--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h2>担当メンバー</h2>
 
     <!-- 👇 各メンバーがここに <p>担当：kiyominn</p> を追加していきます -->
-    <p>担当：manappeさん</p>
+    <p>担当：manappeさん 苦戦中</p>
 
   </div>
 </body>
